syntax = "proto3";
package proto;
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/sukesan1984/snippets/golang/grpc-gateway/proto/golang";

service SayHello {
  rpc Echo(HelloRequest) returns (HelloResponse) {
    option (google.api.http) = {
	  get: "/echo"
	};
  }
}

message HelloRequest {
  string userName = 1;
  google.protobuf.Timestamp date = 2;
}

message HelloResponse {
  string message = 1;
  repeated Order orders = 2;
}

message Order {
  string name = 1;
  repeated Item items = 2;
}

message Item {
  string id = 1;
}

